--- a/src/app/products/products-list/products-list.component.css
+++ b/src/app/products/products-list/products-list.component.css
@@ -7,6 +7,11 @@
 	height: 5rem;
 }
 
+.main-content {
+	padding: 2rem 2rem 0;
+	background-color: #fff;
+}
+
 aside {
 	width: 17%;
 	padding-left: 0;
