--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -30,8 +30,8 @@ nav#breadcrumb .breadcrumb a {
 }
 
 .main {
-	padding: 2rem 2rem 0;
-	background-color: #fff;
+	/* padding: 2rem 2rem 0; */
+	/* background-color: #fff; */
 	margin-bottom: 1.5rem;
 	overflow: auto;
 }
